--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -2,6 +2,7 @@
 - @site_layout ||= "site"
 - @sub_title
 - @nav_user_title
+- @now_path # a string, for highlight icon in nav_user
 - @page_name # for breadcrumbs
 - @exclude_primary # some options can't be shown in primary blog
 - css "post_display", "dashboard", "main"
