--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,6 @@
 - @sub_title = @nav_user_title = '我的消息'
 - content_for :title, @sub_title
+- @now_path = "messages"
 
 - if @unread_count > 0
   - content_for :nav_user_append, do
