--- a/app/views/posts/favors.html.haml
+++ b/app/views/posts/favors.html.haml
@@ -1,4 +1,5 @@
 - @sub_title = @nav_user_title = '我喜欢的'
+- @now_path = "favors"
 - content_for :title, @sub_title
     
 .timeline{ :data => { :widget => "sugar" } }
