--- a/app/views/users/buzz.html.haml
+++ b/app/views/users/buzz.html.haml
@@ -1,4 +1,5 @@
 - @sub_title = @nav_user_title = '我的回复'
+- @now_path = "buzz"
 - css 'buzz'
 - content_for :title, @sub_title
 - if current_user.comments_notices.unreads.count > 0
