--- a/app/views/layouts/_nav_user.html.haml
+++ b/app/views/layouts/_nav_user.html.haml
@@ -14,19 +14,19 @@
       = yield :nav_user_append if content_for?(:nav_user_append)
   .z_container
     .z_following<
-      %a{ href: followings_path, title: "我关注的"}<
+      %a{ href: followings_path, title: "我关注的", class: (@now_path == "followings" ? "highlight" : "")}<
         我关注的
     .z_favor<
-      %a{ href: favors_posts_path, title: "我喜欢的"}<
+      %a{ href: favors_posts_path, title: "我喜欢的", class: (@now_path == "favors" ? "highlight" : "")}<
         我喜欢的
     .z_buzz<
-      %a{ href: buzz_path, title: "回复"}<
+      %a{ href: buzz_path, title: "回复", class: (@now_path == "buzz" ? "highlight" : "")}<
         回复
       %span<
         - if current_user.comments_notices.unreads.count > 0
           = current_user.comments_notices.unreads.count
     .z_message<
-      %a{ href: messages_path, title: "消息"}<
+      %a{ href: messages_path, title: "消息", class: (@now_path == "messages" ? "highlight" : "")}<
         消息
       %span<
         - if current_user.messages.unreads.count > 0
