--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -100,6 +100,7 @@
     .z_following
       a
         background: url('/images/navi_icon.gif') no-repeat 0 -40px
+        &.highlight,
         &:hover
           background: url('/images/navi_icon.gif') no-repeat 0 0
     .z_favor
@@ -107,6 +108,7 @@
       top: -30px
       a
         background: url('/images/navi_icon.gif') no-repeat -40px -40px
+        &.highlight,
         &:hover
           background: url('/images/navi_icon.gif') no-repeat -40px 0
     .z_buzz
@@ -114,6 +116,7 @@
       top: -60px
       a
         background: url('/images/navi_icon.gif') no-repeat -80px -40px
+        &.highlight,
         &:hover
           background: url('/images/navi_icon.gif') no-repeat -80px 0
     .z_message
@@ -121,6 +124,7 @@
       top: -90px
       a
         background: url('/images/navi_icon.gif') no-repeat -120px -40px
+        &.highlight,
         &:hover
           background: url('/images/navi_icon.gif') no-repeat -120px 0
 
