--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -254,6 +254,8 @@ a.page_name
   clear: both
   line-height: 40px
   margin-left: 20px
+  font-size: 14px
+  color: $gray
 
 .highlight_following .menu_arrow
   background: url('/images/icons.gif') -20px -20px
