--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -16,7 +16,7 @@
       = yield
   = render :partial => 'shared/footer'
 
+- content_for :title, @sub_title+"_宽岛"
 - content_for :site_layout, @site_layout 
-- @sub_title += '_宽岛'
 
 = render :file => 'layouts/application'
