--- a/public/stylesheets/moorainbow.css
+++ b/public/stylesheets/moorainbow.css
@@ -38,17 +38,32 @@
 	width: 59px; 
 	height: 34px;
 }
-.moor-okButton {
-	font-family: Tahoma;
-	font-weight: bold;
-	font-size: 11px;
-	margin-top: 278px;
-	margin-left: 8px;
-	background: #e6e6e6;
-	height: 23px;
-	border: 1px solid #d6d6d6;
-	border-left-color: #f5f5f5;
-	border-top-color: #f5f5f5;
+.moor-okButton, .moor-cancelButton {
+  -moz-border-bottom-colors: none;
+  -moz-border-image: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #aaaaaa;
+  border-color: #c8c8c8 #b6b6b6 #b6b6b6 #c8c8c8;
+  border-radius: 5px 5px 5px 5px;
+  border-right: 1px solid #b6b6b6;
+  border-style: solid;
+  border-width: 1px;
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 3px 10px;
+  text-decoration: none;
+  _padding: 6px 10px 0px 10px;
+  _margin-top: 5px; 
+  background: #57c328;
+  margin-top: 275px;
+  margin-left: 108px;
+}
+.moor-cancelButton {
+  background: #aaa;
+  margin-left: 168px;
 }
 #mooRainbow label {
 	font-family: mono;
