--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -106,6 +106,7 @@
       .content
         height: 150px
       .tag
+        background-color: rgb(0, 0, 0)
         background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7) !important
         -moz-border-radius: 10px
         webkit-border-radius: 10px
