--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -2926,12 +2926,6 @@ margin-bottom:30px;
 	right:20px;
 }
 
-.site .backhome{
-	width:80px;
-	height:20px;
-	background:url('images/btn_backhome.gif') no-repeat;
-	
-}
 
 
 
@@ -2971,14 +2965,14 @@ margin-bottom:30px;
 .dashboard .sub_intro{
 	width:680px;
 	height:40px;
-	background-color:#444444;
+	background-color:#b8e3b7;
 	color:#808080;
-	font-size:14px;
+	font-size:18px;
 	font-family:"Hiragino Sans GB,hei,microsoft yahei";
 	line-height:40px;
 	text-align:center;
 	position:absolute;
-	top:100px;
+	top:101px;
 	left:20px;
 	border-bottom-right-radius:10px;
 	border-bottom-left-radius:10px;
@@ -2993,8 +2987,20 @@ margin-bottom:30px;
 	height:14px;
 	background:url('images/icons.gif') no-repeat -100px -20px;
 	position:absolute;
-	top:10px;
+	top:12px;
 	right:20px;
 }
 
+/****************************back_home>********************************************************/
+.site .backhome{
+	width:80px;
+	height:20px;
+	background:url('images/btn_backhome.gif') no-repeat;
+	display:block;
+	
+}
 
+
+.header .navigator_post{
+	float:right;
+}
