--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -12,7 +12,8 @@
       title: '展开' }
     = link_to "转贴", renew_post_path(post), :class => 'repost', :title => '转贴'
     - favor_href, favor_data = favor_toggle_post_path(post), { :widget => "rest", :callback => "toggle", :md => "put" }
-    - if current_user and post.favored_by? current_user
+    - faved = current_user && post.favored_by?(current_user)
+    - if faved
       - favor_data["class"] = "fave"
       - favor_data["title"] = "喜欢"
       %a{ :href => favor_href, :title => '不喜欢', :class => 'faved', :data => favor_data }<
@@ -39,6 +40,12 @@
           %a{ :href => blog_path(post.parent.blog) }
             = post.parent.blog.title
       %span.update_time= post.created_at
-    .right
+    .right.post_stat
       %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
         = post.comments.count == 0 ? " " : post.comments.count
+      %a.repost_count{href: post_path(post)}
+        .repost_icon
+        = post.repost_count
+      %a.favor_count{href: post_path(post)}
+        .favor_icon{class: faved ? 'faved' : 'fave'}
+        = post.favor_count
