--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -44,7 +44,6 @@
 
 
   .right
-    width: 100px
     float: right
 
   .middle,
@@ -261,7 +260,7 @@
   .remove
     background-position: -60px 0
 
-  .repost
+  .repost, .repost_icon
     background-position: -20px 0
 
   .reply
@@ -475,3 +474,25 @@
     img
       height: auto
       width: auto
+
+.post_stat
+  @include clear_fix
+
+  .favor_count,
+  .repost_count
+    margin: 16px
+    margin-right: 0
+    float: right
+    text-indent: 0
+    vertical-align: bottom
+    line-height: 16px
+    color: #676767
+    text-decoration: none
+
+  .repost_icon,
+  .favor_icon
+    @include post_button
+    visibility: visible
+    float: left
+    margin: 0
+    margin-right: 2px
