--- a/app/views/posts/news.html.haml
+++ b/app/views/posts/news.html.haml
@@ -10,4 +10,4 @@
   .timeline{ :data => { :widget => "sugar" } }
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
 
-  = pagination_standard  
+  = pagination_standard({:max_page => 50})
