--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -31,7 +31,7 @@
         标签：
         - post.tags.each do |tag|
           %a{ :href => tagged_path(tag) }<
-            = "#{tag}"
+            = "#{tag.to(12)}"
             = ", " unless tag == post.tags.last
     .left<
       - unless post.parent.nil?
