Documentation for customization

--- a/app/views/blogs/customize.html.haml
+++ b/app/views/blogs/customize.html.haml
@@ -83,7 +83,7 @@
         %a.button{href: "#", data: {widget: 'toggler', target: 'fieldset.template',
           classes: 'editing_custom_html picking_template', field: 'blog[using_custom_html]'}}
           返回选择模板
-        %a.button{href: "#"} 帮助
+        %a.button{href: fucking_root + 'doc/template.html', target: '_blank'} 帮助
   %fieldset.appearance.menu{ data: {widget: "appearance"}}
     = render :partial => 'blogs/template_variables'
   %fieldset.advanced.menu
