--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -151,7 +151,7 @@ Section里使用</p>
 <li><a href="#text-section">text</a> 文字
 <li><a href="#photo-set-section">photo_single</a> 只有一张图片的图片帖子
 <li><a href="#photo-set-section">photo_set</a> 多张图片的图片帖子
-<li><a href="#link-sectio">link</a> 链接
+<li><a href="#link-section">link</a> 链接
 <li><a href="#video-section">video</a> 视频
 </ul>
 
