Now we've got a help page

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -15,6 +15,7 @@
     body {
       width: 800px;
       margin: 0 auto;
+      padding-bottom: 4em;
     }
   </style>
 </head>
@@ -23,6 +24,9 @@
 <h1 id="logo"><a href="http://www.kuandao.com">宽岛</a></h1>
 
 <p>这里是宽岛自定义模板文档</p>
+
+<p>有问题请留言联系这里：<a
+  href="http://htmlization.kuandao.com/">模板这点事</a></p>
 
 <h2>语法</h2>
 
@@ -385,3 +389,8 @@ on/off来标注逻辑真/假，其余写法会被模板系统忽略</p>
     {{/bool_should_display_followings}}
 </code></pre>
 </body>
+
+<h2>还是看不懂！</h2>
+
+<p>试着来这里留言联系我们吧：<a
+  href="http://htmlization.kuandao.com/">http://htmlization.kuandao.com/</a></p>
