--- a/public/stylesheets/admin_templates.sass
+++ b/public/stylesheets/admin_templates.sass
@@ -1,7 +1,7 @@
 @import 'base'
 
 #container
-  width: 1100px
+  width: 1200px
   @include clear_fix
 
 .main
@@ -10,4 +10,7 @@
 
 .sidebar
   float: right
-  width: 200px
+  width: 300px
+
+.assets input
+  width: 100%
