Friendly invitation link

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -417,6 +417,10 @@ fieldset.appearance
   .buttons
     margin-top: 15px
 
+.shrinked
+  .invite_desc,
+  .invite_link
+    display: none
 
 .customize_navigation
   @include clear_fix
