--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -26,6 +26,8 @@
       width: 300px
   .page_url
     width: 540px
+    input
+      width: 250px
   .page_box
     padding-top: 20px    
     height: 100px
