--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -108,6 +108,9 @@ label
         text-decoration: none
         padding: 0
 
+.js_enabled .navigator .menu
+  display: none
+
 a.logo
   display: inline
   border: 0
