--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -22,8 +22,8 @@
   .left
     %h1<
       = "#{@action}#{@post_type}"
-      - unless @post.errors.empty?
-        %span.post_error<
+      %span.post_error<
+        - unless @post.errors.empty?
           = @post.errors.values.first.first
    
     = content_for :form
@@ -31,5 +31,5 @@
       - if @post.type != 'text'
         = content_for :content_toggle
       %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
-        %input{ :type => "submit", :value => (%w[new renew].include? params[:action])? '发布' : '保存' }
+        %input#submit_btn{ :type => "submit", :value => (%w[new renew].include? params[:action])? '发布' : '保存' }
       %a.cancel{href: url_for(:back)} 返回上一页
