textarea format && pre css

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -41,6 +41,10 @@ textarea
 label
   font-family: $font-main
 
+pre
+  white-space: pre-wrap
+  word-wrap: break-word
+
 .header
   margin-top: 5px
   height: 50px
