Sans-serif everywhere

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -358,7 +358,7 @@ a.page_name
     word-wrap: break-word        
 
   .update_time
-    font-family: Arial, Verdana
+    font-family: Arial, Verdana, sans-serif
     color: #888888
 
   .content_body
