--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -55,7 +55,7 @@
 
 .update_time
   font-size: 10px
-  font-family: Arial, Verdana
+  font-family: Arial, Verdana, sans-serif
   color: #888888
 
 .hidden
