--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -21,7 +21,7 @@
     float: right
     padding-top: 35px
     h2
-      font-family: microsoft yahei
+      font-family: $font-main
       font-size: 18px
       line-height: 18px
       color: #68879F
