--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -185,7 +185,7 @@
           @include border-radius(5px)
           height: 10px
           font-size: 12px
-          font-family: "arial"
+          font-family: "arial", sans-serif
           padding: 2px 5px 1px 5px
           margin-left: 5px
           vertical-align: middle
