--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -1,5 +1,5 @@
 - js 'Fx.ProgressBar', 'FancyUpload3.Attach', 'Swiff.Uploader'
-- @post_type = capture do
+- @post_type ||= capture do
   图片贴
 - content_for :form do
   .option_text_top<
