--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -389,3 +389,13 @@
     color: $gray
     &:hover
       background: url('images/mypages_close.png')
+
+.fetch_list
+  height: 300px
+  width: 200px
+  overflow-y: auto
+  img
+    height: 60px
+    width: 60px
+    cursor: pointer
+  
