--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -44,7 +44,8 @@ label
 pre
   white-space: pre-wrap
   word-wrap: break-word
-  family: $font-main
+  font-family: $font-main
+  line-height: 1.5
 
 .header
   margin-top: 5px
