--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -77,7 +77,7 @@ label{font-family:Hiragino Sans GB,hei,microsoft yahei;}
 	padding-top:10px;
 	padding-right:6px;
 	text-align:right;
-	font-size:18px;
+	font-size:14px;
 	line-height:24px;
 	color:#3366cc;
 }
@@ -2552,7 +2552,7 @@ margin-bottom:30px;
 
 .header .dash_navigator a{
     color:#3366cc;
-	padding:5px 10px;
+	padding:5px 8px;
 	text-decoration:none;
 }
 
@@ -2930,7 +2930,7 @@ margin-bottom:30px;
 
 
 
-/***********************************dashboard_2011/3/22************************************************/
+/***********************************dashboard_my_homepage************************************************/
 
 .dashboard .head{
 	background: url('images/dash_.gif') no-repeat;
