--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -1,25 +1,23 @@
 .header
   %a.logo{href: fucking_root, title: "我的主页"}
   .navigator{data: {widget: "navigator", highlight: (@nav_now || "dashboard")}}<
-    %a.now_dashboard{href: fucking_root}<
-      我的主页      
-    &nbsp;
-    .menu
-      %div<
-        探索
-        %span<
-          &nbsp;
-      %div<
-        %a{href: wall_posts_path} 展示墙
-      %div<
-        %a{href: tags_path} 标签墙
-      %div<
-        %a{href: news_posts_path} 随便看看
-    %a.tar.now_discovery{href: "#"}<
-      探索
-      %span<
-        &nbsp;
-    .menu
+    %a.z_dashboard{href: fucking_root}><
+      我的主页
+    %span><
+      |    
+    %a.z_wall{href: wall_posts_path}><
+      展示墙
+    %span><
+      |    
+    %a.z_discovery{href: tags_path}><
+      标签墙
+    %span><
+      |    
+    %a.z_news{href: news_posts_path}><
+      随便看看
+    %span><
+      |    
+    .menu><
       %div<
         我的账户
         %span<
@@ -30,7 +28,7 @@
         %a{href: "#{fucking_root}signup/#{current_user.inv_code}", data: {widget: "invite"}} 邀请好友
       %div<
         %a{href: signout_path, :data => { :confirm => "确定登出?"}} 退出
-    %a.tar.now_account{href: "#"}<
+    %a.tar.z_account{href: "#"}><
       我的账户
       %span<
         &nbsp;
