PostView#faved_by

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -151,6 +151,8 @@
 <li>repost_parent 如果是转帖发布可以进入一个<a href="#blog-section">Blog Section</a>访问转帖来源页面的信息</li>
 <li>has_tag 有标签的帖子可以进入该section</li>
 <li>tags 进入<a href="#tags-section">Tags Section</a>访问各个标签信息</li>
+<li>is_faved 如果有人喜欢了该帖子那么会进入该section</li>
+<li>faved_by 进入<a href="user-section">User Section</a>访问喜欢该帖子的用户数据</li>
 </ul>
 
 <h4>表述帖子类型的section</h4>
