--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -109,7 +109,7 @@
 <li>is_primary
 如果页面是用户的主页面那么可以进入，有些section如other_pages，followings仅在主页面出现</li>
 <li>other_pages
-页面拥有者参与的所有页面，用户主页面特有，其中字段见<a
+页面拥有者参与的所有页面（私密页面除外），用户主页面特有，其中字段见<a
   href="#blog-section">Blog Section</a></li>
 <li>has_other_pages 页面拥有者是否参与或关注了其它页面，用户主页面特有</li>
 <li>followings 页面拥有者所关注的页面，用户主页面特有，其中字段见<a href="#blog-section">Blog Section</a></li>
