Fix shared_url for default template

--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -55,7 +55,7 @@
               {{/photo_set}}
 
               {{#link}}
-                <a href="{{link_url}}">{{title}}</a>
+                <a href="{{shared_url}}">{{title}}</a>
                 <p>{{content}}</p>
               {{/link}}
 
