--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -57,7 +57,7 @@ pre
   font-size: 14px
   line-height: 24px
   padding-top: 10px
-  padding-right: 3px
+  padding-right: 0
   span
     color: $blue
   a
@@ -90,13 +90,13 @@ pre
     display: inline
     font-size: 14px
     line-height: 24px
-    padding: 0px 5px
+    padding: 0px 7px
     @include border-radius(8px)
     overflow: hidden
     text-align: left
     position: absolute
-    margin-left: -2px
-    margin-top: -4.5px
+    margin-top: -5px
+    margin-left: -5px
     _width: 120px
     div
       border-top: 1px solid #eaeaea
@@ -118,6 +118,7 @@ pre
         font-size: 14px
         text-decoration: none
         padding: 0
+        margin: 0
 
 .js_enabled .navigator .menu
   display: none
