Fix crappy style shit

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -176,11 +176,13 @@ form.edit_blog
 
 .edit_blog
   font-size: 12px
-  line-height: 16px
+  line-height: 18px
+  _line-height: 22px
 
   label, input
     margin-bottom: 12px
-    height: 16px
+    height: 18px
+    _height: 22px
 
   .blog_info
     width: 380px
@@ -451,8 +453,11 @@ fieldset.appearance
     padding: 5px
     max-height: 235px
     *height: 235px
+    overflow-x: hidden
     overflow-y: auto
     font-size: 12px
+    word-break: break-all
+    word-wrap: break-word
 
     li
       border-bottom: 1px #ddd dashed
