No shitty style for IE6

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -101,18 +101,20 @@ pre
     div
       border-top: 1px solid #eaeaea
       margin-top: -1px
+      _margin-top: 5px
       padding: 4px
       height: 24px
       color: $blue
       span
         display: inline-block
+        *display: inline
+        *zoom: 1
         width: 14px
         height: 14px
         background: url('/images/icons.gif') -120px -40px
         position: relative
         top: 5px
         _top: 0px
-        _zoom: 1
         overflow: hidden
       a       
         font-size: 14px
