--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -322,8 +322,8 @@ form.edit_blog
       height: 480px
 
       textarea
-        width: 100%
-        height: 100%
+        width: 740px
+        height: 480px
 
     .buttons
       margin-top: 15px
