fix post form textarea

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -194,10 +194,10 @@
 
   .text textarea
     border: 0
-    @include size(570px, 340px)
+    @include size(600px, 340px)
     font-size: $input-font-size
     line-height: 1.5
-    padding-left: 20px
+    padding: 0 0 0 20px
 
   .operation
     height: 44px
